src/test/deca/context/invalid/operations/bool/invalid_bool_op_gt_bool.deca
// Description:
//    test invalid GT between int and boolean
//
// [Begin Result]
//invalid_bool_op_gt_bool.deca:12:18: Unsupported operation '>' between types int and boolean. Operation '>' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = 1 > true;
}